--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -1,14 +1,15 @@
 <div class="ms-3 me-3">
     
     <div class="header">
-    
         <h4 >Manage Tasks</h4><span class="task"><a href="#" >Home</a>/Manage Tasks </span>
-        </div>
-<div class="container1 " >
-    
-    <div class="h5 pb-2 mb-4  border-bottom ">
-        Manage Tasks
     </div>
+
+    <div class="container1 " >
+    
+    <div class="h5 pb-2 mb-4  border-bottom ">Manage Tasks</div>
+    
+
+    
     <div class="table-responsive m-1 align-items-center">
     <table class="table table-bordered " id="taskTable">
         <thead class="table-light">
